# haskell-practice

./: 1_basics.hs  Basics.hs  LICENSE  README.md  haskell-practice.cabal
Bioinformatics/: Bioinformatics.hs
Bioinformatics/Genomics/: DNA.hs  RNA.hs
Homework/: A.hs  B.hs
app/: Main.hs
homework/: 1_homework.hs  2_homework.hs  3_homework.hs  D.hs
src/: Sandbox.hs
src/Homework/: A.hs  C.hs  D.hs  E.hs
src/SupportFiles/: Log.hs
