cabal-version:      2.4
name:               haskell-practice
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jure Vito Srovin
maintainer:         jure.vito@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-practice
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Genomics.DNA,
                        Genomics.RNA,
                        Bioinformatics,
                        Homework.A,
                        Homework.B,
                        Homework.C,
                        Homework.D


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0, random, containers
    hs-source-dirs:   ., app, Bioinformatics, Homework
    default-language: Haskell2010
    ghc-options: -Wall -O2
