cabal-version:      2.4
name:               haskell-practice
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jure Vito Srovin
maintainer:         jure.vito@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-practice
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Sandbox,
                    SupportFiles.Log
                    Homework.A,
                    Homework.B,
                    Homework.C,
                    Homework.D

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   app, src
    default-language: Haskell2010
